--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+html, body, #root{
+  height: 100%;
+  width: 100%;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 0 0 30px 0 #111;
+  height: 100vh;
+  max-width: 500px;  
+  margin: auto;
+  text-align: center;
+  }
+.container > form {
+  width: 70%;
+  border: 1px solid black;
+  padding: 20px;
+  border-radius: 5px;
+  background: blue;
+  display: grid;
+  font-size: 20px;
+
+}
+.boton{
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+  width: 70px;
+  margin-left: 40%;
+}
+.father{
+  background-color: blue;  
+}
+.wrong{
+  padding-top: 200px;
+  display: grid;  
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: blueviolet;
+  font-size: 50px ;
+  text-align:  center;
+  grid-auto-rows: 100px;
+  height: 100vh;
 }
