--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ html, body, #root{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: inset 0 0 30px 0 #111;
+  box-shadow: inset 0 0 30px 0 #DB750F;
   height: 100vh;
   max-width: 500px;  
   margin: auto;
@@ -17,10 +17,10 @@ html, body, #root{
   }
 .container > form {
   width: 70%;
-  border: 1px solid black;
+  border: transparent;
   padding: 20px;
   border-radius: 5px;
-  background: blue;
+  background: #25d855;
   display: grid;
   font-size: 20px;
 
@@ -36,9 +36,8 @@ html, body, #root{
   
   border-radius: 3px;
 }
-.father{
-  background-color: blue;  
-}
+
+
 .wrong{
   padding-top: 200px;
   display: grid;  
@@ -55,4 +54,7 @@ input{
   border-bottom: 1px solid rgb(82, 66, 66);
   margin-bottom: 10px;
   border-radius: 3px;
+  background: #db750fd0;
+  color:black;
+  outline: none;
 }
