--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,7 @@
-html, body, #root{
-  height: 100%;
-  width: 100%;
-  
-}
 
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  box-shadow: inset 0 0 30px 0 #DB750F;
-  height: 100vh;
-  max-width: 500px;  
-  margin: auto;
-  text-align: center;
-  }
-.container > form {
-  width: 70%;
-  border: transparent;
-  padding: 20px;
-  border-radius: 5px;
-  background: #25d855;
-  display: grid;
-  font-size: 20px;
 
-}
+
+
 .boton{
   margin-top: 5px;
   display: flex;
@@ -50,11 +27,10 @@ html, body, #root{
   height: 100vh;
 }
 input{
-  border: none;
-  border-bottom: 1px solid rgb(82, 66, 66);
+  border: none;  
   margin-bottom: 10px;
   border-radius: 3px;
-  background: #db750fd0;
+  background: white;
   color:black;
   outline: none;
 }
